Fix regression in paging; put back paging control on mobile

--- a/src/css/xx/components/_collection-images.scss
+++ b/src/css/xx/components/_collection-images.scss
@@ -118,12 +118,6 @@ $mobile-all-images-gutter-width: 3px;
     }
 }
 
-.xxPagingControls {
-    @include breakpoint-mobile {
-        display: none;
-    }
-}
-
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
 .xxShowMore {
